syntax = "proto3";

option java_multiple_files = true;
option java_package = "top.beliefyu.fstream.rpc";
option java_outer_classname = "RpcServerProto";

package rpc;


message MessageRequest {

}

message MessageResponse {
    string key = 1;
    uint32 timestamp = 2;
    uint32 watermark = 3;
    bytes data = 4;
}

message HeartBeatRequest {
    uint32 timestamp = 1;
    string msg = 2;
}

message HeartBeatResponse {
    uint32 timestamp = 1;
    string msg = 2;
}

service RpcServer {

    rpc PullMessage (MessageRequest) returns (stream MessageResponse) {
    }

    rpc DoHeartBeatTest (HeartBeatRequest) returns (HeartBeatResponse) {
    }

}

